...
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="@dimen/standard_margin" android:layout_marginStart="8dp"
              app:layout_constraintStart_toStartOf="parent"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/statusTextView"
              android:textSize="@dimen/normal_font_size"
              android:textStyle="bold"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="@dimen/standard_margin" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="@dimen/standard_margin" android:layout_marginTop="@dimen/standard_margin"
              app:layout_constraintTop_toBottomOf="@+id/nameTextView"
    />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeStatus"
            android:id="@+id/statusChangeButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/standard_margin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/standard_margin" android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintTop_toBottomOf="@+id/statusTextView"/>

</android.support.constraint.ConstraintLayout>
...
